log
Wed 10 May 2023 06:04:53 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
81945f8
Wed 10 May 2023 06:06:16 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
5b23897
Wed 10 May 2023 06:06:49 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
3a72a76
Wed 10 May 2023 06:09:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:17: error: expected expression before ‘]’ token
   56 |   mapa->buckets[] = NULL;
      |                 ^
Compilation failed
78ca720
Wed 10 May 2023 06:23:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:17: error: expected expression before ‘]’ token
   56 |   mapa->buckets[] = {NULL};
      |                 ^
Compilation failed
a2f1da5
Wed 10 May 2023 06:23:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
612fd0e
Wed 10 May 2023 06:23:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b566122
